{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 28,
  "lineage": "bdb1dd1d-a9fc-1397-6edf-e095ac1cdeb0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipUSWTA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-e4fc9d18",
            "domain": "vpc",
            "id": "eipalloc-0c35aec5edcd0e1e3",
            "network_interface": "eni-0ca90b4ed2b019728",
            "private_dns": "ip-192-168-200-100.ap-southeast-1.compute.internal",
            "private_ip": "192.168.200.100",
            "public_dns": "ec2-13-250-246-193.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.246.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eipUSWTA"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2USWTAApplication1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bcfe837ad6fc3cc",
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:instance/i-0e37dacecd559e9f7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e37dacecd559e9f7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "monitoring": false,
            "primary_network_interface_id": "eni-0dcfc748e8fda8346",
            "private_dns": "ip-192-168-201-44.ap-southeast-1.compute.internal",
            "private_ip": "192.168.201.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e3eeaeb6ae4bc1eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01239a21d129a4a46",
            "tags": {
              "Name": "ec2USWTA - Application - 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04718abf57a338ab9"
            ]
          },
          "dependencies": [
            "aws_security_group.sgUSWTAApplication",
            "aws_subnet.subPrivate1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2USWTAApplication2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03bcfe837ad6fc3cc",
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:instance/i-0b835f1eba499b7f9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b835f1eba499b7f9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "monitoring": false,
            "primary_network_interface_id": "eni-03da5e5c4181e63b5",
            "private_dns": "ip-192-168-201-200.ap-southeast-1.compute.internal",
            "private_ip": "192.168.201.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01073c33a368e1547",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0975212fa83a1c7e1",
            "tags": {
              "Name": "ec2USWTA - Application - 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04718abf57a338ab9"
            ]
          },
          "dependencies": [
            "aws_security_group.sgUSWTAApplication",
            "aws_subnet.subPrivate2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2USWTABastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a4a9ce71ff3f20b",
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:instance/i-0befbe46fad1b1e02",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0befbe46fad1b1e02",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb138b573341738c",
            "private_dns": "ip-192-168-200-80.ap-southeast-1.compute.internal",
            "private_ip": "192.168.200.80",
            "public_ip": "3.0.177.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-079599dae330846ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0daf39fb4078b318b",
            "tags": {
              "Name": "ec2USWTA - Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-062e1269694e1a0a8"
            ]
          },
          "dependencies": [
            "aws_security_group.sgUSWTABastion",
            "aws_subnet.subPublic1",
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwUSWTA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c6f2019a5f4f751e",
            "owner_id": "275978767003",
            "tags": {
              "Name": "igwInternetGateway - USWTA"
            },
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "albUSWTA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:loadbalancer/app/albUSWTA/c96054b789dd0e22",
            "arn_suffix": "app/albUSWTA/c96054b789dd0e22",
            "dns_name": "albUSWTA-1450849092.ap-southeast-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:loadbalancer/app/albUSWTA/c96054b789dd0e22",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "albUSWTA",
            "security_groups": [
              "sg-07412c741e54703a2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0058e61193c5b0577"
              },
              {
                "subnet_id": "subnet-0daf39fb4078b318b"
              }
            ],
            "subnets": [
              "subnet-0058e61193c5b0577",
              "subnet-0daf39fb4078b318b"
            ],
            "tags": {
              "Name": "Application Load Balancer for USWTA"
            },
            "vpc_id": "vpc-086627fb4785d192d",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.sgUSWTAALB",
            "aws_subnet.subPublic1",
            "aws_subnet.subPublic2",
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lisUSWTA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:listener/app/albUSWTA/c96054b789dd0e22/796b8bc8967720e1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:targetgroup/tgUSWTA/005ce56ceb3a3a22",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:listener/app/albUSWTA/c96054b789dd0e22/796b8bc8967720e1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:loadbalancer/app/albUSWTA/c96054b789dd0e22",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.albUSWTA",
            "aws_lb_target_group.tgUSWTA",
            "aws_security_group.sgUSWTAALB",
            "aws_subnet.subPublic1",
            "aws_subnet.subPublic2",
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tgUSWTA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:targetgroup/tgUSWTA/005ce56ceb3a3a22",
            "arn_suffix": "targetgroup/tgUSWTA/005ce56ceb3a3a22",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:targetgroup/tgUSWTA/005ce56ceb3a3a22",
            "lambda_multi_value_headers_enabled": false,
            "name": "tgUSWTA",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgaUSWTA1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:targetgroup/tgUSWTA/005ce56ceb3a3a22-20200223050429693400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:targetgroup/tgUSWTA/005ce56ceb3a3a22",
            "target_id": "i-0e37dacecd559e9f7"
          },
          "dependencies": [
            "aws_instance.ec2USWTAApplication1",
            "aws_lb_target_group.tgUSWTA",
            "aws_security_group.sgUSWTAApplication",
            "aws_subnet.subPrivate1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgaUSWTA2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:targetgroup/tgUSWTA/005ce56ceb3a3a22-20200223050429917300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:275978767003:targetgroup/tgUSWTA/005ce56ceb3a3a22",
            "target_id": "i-0b835f1eba499b7f9"
          },
          "dependencies": [
            "aws_instance.ec2USWTAApplication2",
            "aws_lb_target_group.tgUSWTA",
            "aws_security_group.sgUSWTAApplication",
            "aws_subnet.subPrivate2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngwUSWTA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c35aec5edcd0e1e3",
            "id": "nat-0c004fdc656caa658",
            "network_interface_id": "eni-0ca90b4ed2b019728",
            "private_ip": "192.168.200.100",
            "public_ip": "13.250.246.193",
            "subnet_id": "subnet-0daf39fb4078b318b",
            "tags": {
              "Name": "ngwUSWTA"
            }
          },
          "dependencies": [
            "aws_eip.eipUSWTA",
            "aws_subnet.subPublic1",
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rtMainRoute",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "nat-0c004fdc656caa658",
            "id": "r-rtb-01fc71bd29365f8701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0c004fdc656caa658",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01fc71bd29365f870",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_nat_gateway.ngwUSWTA",
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rtPublicRoute",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c6f2019a5f4f751e",
            "id": "r-rtb-09e6426e41af024491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e6426e41af02449",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.igwUSWTA",
            "aws_route_table.rtPublic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtPublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09e6426e41af02449",
            "owner_id": "275978767003",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6f2019a5f4f751e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtPublic - USWTA"
            },
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtPubAssoc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072f3a728fdc5c164",
            "route_table_id": "rtb-09e6426e41af02449",
            "subnet_id": "subnet-0daf39fb4078b318b"
          },
          "dependencies": [
            "aws_route_table.rtPublic",
            "aws_subnet.subPublic1",
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtPubAssoc2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a988ca26d802178",
            "route_table_id": "rtb-09e6426e41af02449",
            "subnet_id": "subnet-0058e61193c5b0577"
          },
          "dependencies": [
            "aws_route_table.rtPublic",
            "aws_subnet.subPublic2",
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgUSWTAALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:security-group/sg-07412c741e54703a2",
            "description": "Allow access on port 80 from everywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07412c741e54703a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgUSWTA - ALB",
            "name_prefix": null,
            "owner_id": "275978767003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP access from everywhere"
            },
            "timeouts": null,
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgUSWTAApplication",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:security-group/sg-04718abf57a338ab9",
            "description": "Allow access on ports 22 and 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04718abf57a338ab9",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.200.0/25"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07412c741e54703a2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgUSWTA - Application",
            "name_prefix": null,
            "owner_id": "275978767003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow access on ports 22 and 80"
            },
            "timeouts": null,
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_security_group.sgUSWTAALB",
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgUSWTABastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:security-group/sg-062e1269694e1a0a8",
            "description": "Allow access on port 22 from restricted IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062e1269694e1a0a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "42.113.219.160/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgUSWTA - Bastion",
            "name_prefix": null,
            "owner_id": "275978767003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow access on port 22 from my IP"
            },
            "timeouts": null,
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subPrivate1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:subnet/subnet-01239a21d129a4a46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.201.0/25",
            "id": "subnet-01239a21d129a4a46",
            "map_public_ip_on_launch": false,
            "owner_id": "275978767003",
            "tags": {
              "Name": "subPrivate - USWTA - 1"
            },
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subPrivate2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:subnet/subnet-0975212fa83a1c7e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.201.128/25",
            "id": "subnet-0975212fa83a1c7e1",
            "map_public_ip_on_launch": false,
            "owner_id": "275978767003",
            "tags": {
              "Name": "subPrivate - USWTA - 2"
            },
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subPublic1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:subnet/subnet-0daf39fb4078b318b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.200.0/25",
            "id": "subnet-0daf39fb4078b318b",
            "map_public_ip_on_launch": false,
            "owner_id": "275978767003",
            "tags": {
              "Name": "subPublic - USWTA - 1"
            },
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subPublic2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:subnet/subnet-0058e61193c5b0577",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.200.128/25",
            "id": "subnet-0058e61193c5b0577",
            "map_public_ip_on_launch": false,
            "owner_id": "275978767003",
            "tags": {
              "Name": "subPublic - USWTA - 2"
            },
            "vpc_id": "vpc-086627fb4785d192d"
          },
          "dependencies": [
            "aws_vpc.vpcUSWTA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcUSWTA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275978767003:vpc/vpc-086627fb4785d192d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.200.0/23",
            "default_network_acl_id": "acl-025b1ff67c3f6d60e",
            "default_route_table_id": "rtb-01fc71bd29365f870",
            "default_security_group_id": "sg-097b8c16a7ed44f72",
            "dhcp_options_id": "dopt-32cec755",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-086627fb4785d192d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01fc71bd29365f870",
            "owner_id": "275978767003",
            "tags": {
              "Name": "vpcUSWTA"
            }
          }
        }
      ]
    }
  ]
}